--- a/latex/synthese/S1_coeffs_saes_ressources.tex
+++ b/latex/synthese/S1_coeffs_saes_ressources.tex
@@ -3,18 +3,18 @@
  & & \multicolumn{3}{c|}{\bfseries Volumes} 
  & \multicolumn{3}{c|}{\bfseries Coefficients} 
  \\ \hline 
- & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{>{\raggedright}p{5cm}}
-{\textcolor{compCA}{\bfseries RT1}} - Administrer les réseaux et l'Internet\\ 
+ & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
+\hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1}} - Administrer les réseaux et l'Internet\\ 
  \small Niveau 1 - Assister l'administrateur du réseau
 \end{tabular}
 }
- & \rotatebox[origin=l]{90}{\begin{tabular}{>{\raggedright}p{5cm}}
-{\textcolor{compCB}{\bfseries RT2}} - Connecter les entreprises et les usagers\\ 
+ & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
+\hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2}} - Connecter les entreprises et les usagers\\ 
  \small Niveau 1 - Découvrir les transmissions et la ToIP
 \end{tabular}
 }
- & \rotatebox[origin=l]{90}{\begin{tabular}{>{\raggedright}p{5cm}}
-{\textcolor{compCC}{\bfseries RT3}} - Créer des outils et applications informatiques pour les R\&T\\ 
+ & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
+\hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3}} - Créer des outils et applications informatiques pour les R\&T\\ 
  \small Niveau 1 - S'intégrer dans un service informatique
 \end{tabular}
 }
@@ -27,19 +27,19 @@
 2h & 5h & 12h & 16 &  & \\ 
 \hline \hyperlink{sae:SAÉ12}{\textcolor{saeC}{SAÉ12}} & 
 \begin{tabular}{p{5.7cm}} \tiny{S'initier aux réseaux informatiques} \end{tabular} & 
-4h & 6h & 20h & 33 &  & \\ 
+3h & 7h & 20h & 33 &  & \\ 
 \hline \hyperlink{sae:SAÉ13}{\textcolor{saeC}{SAÉ13}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Découvrir un dispositif de transmission} \end{tabular} & 
 2h & 5h & 16h &  & 33 & \\ 
 \hline \hyperlink{sae:SAÉ14}{\textcolor{saeC}{SAÉ14}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Se présenter sur Internet} \end{tabular} & 
-3h & 7h & 12h &  &  & 16\\ 
+2h & 8h & 12h &  &  & 16\\ 
 \hline \hyperlink{sae:SAÉ15}{\textcolor{saeC}{SAÉ15}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Traiter des données} \end{tabular} & 
 2h & 8h & 20h &  &  & 26\\ 
 \hline \hyperlink{sae:SAÉ16}{\textcolor{saeC}{SAÉ16}} & 
 \begin{tabular}{p{5.7cm}} \tiny{Portfolio} \end{tabular} & 
-  & 5h &   & 0 & 0 & 0\\ 
+  & 3h &   & 0 & 0 & 0\\ 
 \hline \multicolumn{5}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
 \\ 
 \hline \hyperlink{res:R101}{\textcolor{ressourceC}{R101}} & 
@@ -88,7 +88,7 @@
 \begin{tabular}{p{5.7cm}}\tiny{Gestion de projet} \end{tabular} & 
 8h & 4h &  &  & 2 & 4\\ 
 \hline \hline \multicolumn{5}{|l|}{\bfseries Total}
-\\
+\\ 
 \hline \multicolumn{2}{|r|}{\textit{SAÉs}}  & \textit{11h} & \textit{36h} & \textit{80h} & \textit{49} & \textit{33} & \textit{42}\\ \hline \multicolumn{2}{|r|}{\textit{Ressources}}  & \textit{177h} & \textit{216h} & \textit{0h} & \textit{73} & \textit{49} & \textit{54}\\ \hline \multicolumn{2}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 188h} & {\bfseries 252h} & {\bfseries 80h} & {\bfseries 122} & {\bfseries 82} & {\bfseries 96}\\ \hline\multicolumn{5}{l}{~}\\
     \multicolumn{5}{l}{\bfseries Crédits ECTS}\\
     \hline
