--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -52,7 +52,7 @@
 
 \\ 
 \hline 
-\multicolumn{23}{|l|}{{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\\\hline 
+\multicolumn{23}{|l|}{\hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\hline 
 \textcolor{compCA}{AC0111} & 
 \begin{tabular}{p{3.8cm}} \tiny{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}\end{tabular} & 
  & $\times$ &  &  &  & $\times$
@@ -61,7 +61,7 @@
 \textcolor{compCA}{AC0112} & 
 \begin{tabular}{p{3.8cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- &  &  &  &  &  & $\times$ &  &  &  & $\times$ &  & $\times$ &  &  & \\ 
+ &  &  &  &  &  & $\times$ &  &  &  &  &  & $\times$ &  &  & \\ 
 \hline 
 \textcolor{compCA}{AC0113} & 
 \begin{tabular}{p{3.8cm}} \tiny{Configurer les fonctions de base du réseau local}\end{tabular} & 
@@ -71,12 +71,12 @@ $\times$ & $\times$ &  &  &  & $\times$
 \textcolor{compCA}{AC0114} & 
 \begin{tabular}{p{3.8cm}} \tiny{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- &  & $\times$ &  &  &  &  &  & $\times$ &  & $\times$ &  &  &  &  & \\ 
+ &  & $\times$ &  &  &  &  &  & $\times$ &  &  &  &  &  &  & \\ 
 \hline 
 \textcolor{compCA}{AC0115} & 
 \begin{tabular}{p{3.8cm}} \tiny{Identifier les dysfonctionnements du réseau local}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
+ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ &  &  &  &  & \\ 
 \hline 
 \textcolor{compCA}{AC0116} & 
 \begin{tabular}{p{3.8cm}} \tiny{Installer un poste client}\end{tabular} & 
@@ -84,7 +84,7 @@ $\times$ & $\times$ &  &  &  & $\times$
  & $\times$ &  & $\times$ &  &  &  &  & $\times$ &  &  & $\times$ &  &  &  & \\ 
 \hline 
 \hline 
-\multicolumn{23}{|l|}{{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\\\hline 
+\multicolumn{23}{|l|}{\hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\hline 
 \textcolor{compCB}{AC0211} & 
 \begin{tabular}{p{3.8cm}} \tiny{Mesurer et analyser les signaux}\end{tabular} & 
  &  & $\times$ &  &  & $\times$
@@ -92,18 +92,18 @@ $\times$ & $\times$ &  &  &  & $\times$
 \hline 
 \textcolor{compCB}{AC0212} & 
 \begin{tabular}{p{3.8cm}} \tiny{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}\end{tabular} & 
- &  &  &  &  & 
+ &  &  &  &  & $\times$
  &  &  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & \\ 
 \hline 
 \textcolor{compCB}{AC0213} & 
 \begin{tabular}{p{3.8cm}} \tiny{Déployer des supports de transmission}\end{tabular} & 
  &  & $\times$ &  &  & $\times$
- & $\times$ &  & $\times$ &  & $\times$ &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
+ & $\times$ &  & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
 \textcolor{compCB}{AC0214} & 
 \begin{tabular}{p{3.8cm}} \tiny{Connecter les systèmes de ToIP}\end{tabular} & 
- &  &  &  &  &
- &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\
+ &  &  &  &  & $\times$
+ &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
 \textcolor{compCB}{AC0215} & 
 \begin{tabular}{p{3.8cm}} \tiny{Communiquer avec un client ou un collaborateur}\end{tabular} & 
@@ -111,11 +111,11 @@ $\times$ & $\times$ &  &  &  & $\times$
  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & $\times$\\ 
 \hline 
 \hline 
-\multicolumn{23}{|l|}{{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\\\hline 
+\multicolumn{23}{|l|}{\hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\hline 
 \textcolor{compCC}{AC0311} & 
 \begin{tabular}{p{3.8cm}} \tiny{Utiliser un système informatique et ses outils}\end{tabular} & 
  &  &  & $\times$ & $\times$ & $\times$
- & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  & $\times$ & $\times$ & $\times$ &  &  & \\ 
+ & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ &  &  & \\ 
 \hline 
 \textcolor{compCC}{AC0312} & 
 \begin{tabular}{p{3.8cm}} \tiny{Lire, exécuter, corriger et modifier un programme}\end{tabular} & 
@@ -130,7 +130,7 @@ $\times$ & $\times$ &  &  &  & $\times$
 \textcolor{compCC}{AC0314} & 
 \begin{tabular}{p{3.8cm}} \tiny{Connaître l'architecture et les technologies d'un site Web}\end{tabular} & 
  &  &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  & \\ 
+ &  &  &  &  &  &  &  &  & $\times$ &  &  &  &  &  & \\ 
 \hline 
 \textcolor{compCC}{AC0315} & 
 \begin{tabular}{p{3.8cm}} \tiny{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}\end{tabular} & 
