--- a/python/templates/modele_ressource.tex
+++ b/python/templates/modele_ressource.tex
@@ -2,28 +2,17 @@
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvelleressource{#code}{#nom}
+\nouvelleressource{#code}{#codeRT}{#nom}
 
 \ajoutRheures{#heures_formation}{#heures_tp}
 
 %% Les compétences et les ACs
-\ajoutRcompetence{RT1-Administrer}{\niveauA}
+%\ajoutRcompetence{RT1-Administrer}{\niveauA}
+% les coeffRT1
+% les compRT1
 
-#coeffRT1
+#competences_et_ACs
 
-#compRT1
-
-\ajoutRcompetence{RT2-Connecter}{\niveauA}
-
-#coeffRT2
-
-#compRT2
-
-\ajoutRcompetence{RT3-Programmer}{\niveauA}
-
-#coeffRT3
-
-#compRT3
 % Les SAE
 #saes
 
