--- a/python/templates/modele_sae.tex
+++ b/python/templates/modele_sae.tex
@@ -2,29 +2,13 @@
 % SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvellesae{#code}{#titre}
+\nouvellesae{#code}{#codeRT}{#titre}
 
 \ajoutSheures{#heures_encadrees}{#heures_tp}{#heures_projet}
 
 
 %% Les compétences et les ACs
-\ajoutScompetence{RT1-Administrer}{\niveauA}
-
-#coeffRT1
-
-#compRT1
-
-\ajoutScompetence{RT2-Connecter}{\niveauA}
-
-#coeffRT2
-
-#compRT2
-
-\ajoutScompetence{RT3-Programmer}{\niveauA}
-
-#coeffRT3
-
-#compRT3
+#competences_et_ACs
 
 % Le description
 \ajoutSdescription{#description}
